- Fixed minor layout issues in the mobile side

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -287,6 +287,7 @@
     width: 100%;
     height: 100%;
     padding: 0;
+    margin: 0;
     list-style-type: none;
     align-items: center;
     justify-content: center;
@@ -303,6 +304,14 @@
   }
   
   .togglebar:hover .navtext {
+    display: none;
+  }
+
+  .showadmin{
+    display: none;
+  }
+  
+  .togglebar:hover .showadmin {
     display: none;
   }
   
@@ -720,7 +729,7 @@
 /* PDF VIEWER START */
 
 .pdfviewer {
-  width: 70vw;
+  width: 60vw;
   height: 130vh;
   margin-top: 50px;
   margin-bottom: 70px;
